# aunteater

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  THOUGTHS.md
.github/workflows/: build-test-deploy.yml  develop-build_test_deploy.yml  topics-build_test.yml
Resources/scenarios/: accroche.txt  conversation.txt
cmake/: Config.cmake.in  FindCpputest.cmake  cmc-macros.cmake
conan/: conanfile.py
conan/test_package/: CMakeLists.txt  conanfile.py  example.cpp
src/: CMakeLists.txt
src/apps/: CMakeLists.txt
src/apps/BenchingBall/: CMakeLists.txt  ComponentPosition.h  ComponentVelocity.h  SystemMove.cpp  SystemMove.h  SystemRender.cpp  SystemRender.h  Vec2.h  globals.h  main.cpp
src/apps/OpenGL/: CMakeLists.txt  DrawingPolygons.h  Globals.h  ImageReader.cpp  ImageReader.h  Textures.h  main.cpp
src/apps/RealTruc/: main.cpp  test.cpp  test.h
src/apps/TestSuite/: CMakeLists.txt  CommonComponents.h  Entities.cpp  Families.cpp  FamilyHelps.cpp
src/apps/nowave/: CMakeLists.txt
src/apps/tests/: CMakeLists.txt  Engine_tests.cpp  Entities.cpp  EntityManager_tests.cpp  Families.cpp  FamilyHelps.cpp  SystemManager_tests.cpp
src/libs/: .CMakeLists.txt.swp  CMakeLists.txt
src/libs/aunteater/: AuntEaterConfig.cmake  CMakeLists.txt  Component.h  Engine.cpp  Engine.h  Entity.cpp  Entity.h  Family.cpp  Family.h  Handle.h  Node.cpp  Node.h  System.h  globals.h  make.h
src/libs/aunteater/aunteater/: Archetype.h  CMakeFinds.cmake.in  CMakeLists.txt  Component.h  Engine.cpp  Engine.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  Family.cpp  Family.h  FamilyHelp.h  Handle.h  Node.cpp  Node.h  System.h  SystemManager.h  Timer.h  UpdateTiming.h  globals.h  make.h
src/libs/game/: CMakeLists.txt  ComponentAddressee.h  ComponentAlignment.h  ComponentAnimationState.cpp  ComponentAnimationState.h  ComponentBarrier.cpp  ComponentBarrier.h  ComponentDrugState.h  ComponentInteraction.cpp  ComponentInteraction.h  ComponentKeyboard.cpp  ComponentKeyboard.h  ComponentPlayer.cpp  ComponentPlayer.h  ComponentPosition.cpp  ComponentPosition.h  ComponentScale.cpp  ComponentScale.h  ComponentSentence.h  ComponentSpeed.cpp  ComponentSpeed.h  ComponentSprite.cpp  ComponentSprite.h  ComponentTalkedTo.h  ComponentTextList.h  ComponentZBoundary.cpp  ComponentZBoundary.h  ComponentZReorderable.cpp  ComponentZReorderable.h  ComponentZord.cpp  ComponentZord.h  Factories.cpp  Factories.h  InputSystem.cpp  InputSystem.h  InteractionHandler.h  NodeActor.cpp  NodeActor.h  NodeAnimation.cpp  NodeAnimation.h  (+45 more)
